# MasterSimulator

./: Allocator.cpp  Allocator.h  CMakeLists.txt  Framework.cpp  Framework.h  Master.cpp  Master.h  Resource.cpp  Resource.h  Slave.cpp  Slave.h  Task.cpp  Task.h  affinity_propagation.cpp  affinity_propagation.h  bw.txt  lt.txt  main.cpp  randomSelectionCost.txt  selectionCost.txt  test.txt
GraphFiles/Variable_bundle_sizes/100_3_3000_100_3_2_2000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/100_4_4000_100_3_2_2000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/100_4_4000_100_4_4_4000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/100_4_4000_150_2_3_3000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/100_4_4000_150_2_4_4000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/400_4_4000_100_3_4_4000_100_400_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/400_4_4000_100_4_2_2000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_sizes/400_4_4000_100_4_4_4000_100_100_1V_2/: 0  1  2
GraphFiles/Variable_bundle_type/100_3_3000_30_3_2_3000_20_100_5_1V/: 0  1  2
GraphFiles/Variable_bundle_type/100_4_4000_100_2_4_4000_50_50_2_1V/: 0  1  2
GraphFiles/Variable_bundle_type/100_4_4000_150_1_4_4000_50_100_2_1V/: 0  1  2
GraphFiles/Variable_bundle_type/200_4_4000_100_3_3_3000_50_100_2_1V/: 0  1  2
GraphFiles/Variable_bundle_type/200_4_4000_150_3_3_3000_50_100_2_1V/: 0  1  2
GraphFiles/Variable_datacenter_number/100_2_3000_30_2_3_3000_50_100V_2_2/: 0  1  2
(+144 files in other folders)
